--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ### pycache
 __pycache__/
+python/
 
 ### if you cloned this repo and plan to make pull
 ### requests, please, don't add files/folders related
